# minkindr

./: .gitignore  CMakeLists.txt
minkindr/: CMakeLists.txt  kindrConfig.cmake.in
minkindr/include/kindr/minimal/implementation/: rotation-quaternion-inl.h
